--- a/28/style.css
+++ b/28/style.css
@@ -1,6 +1,7 @@
 body{
     margin: 0;
     background-color: #fff9f9;
+    font-family: 'Bradley Hand ITC','Meiryo UI';
 }
 nav{
     background-color: #f5ecf4;
@@ -18,8 +19,7 @@ nav li{
     box-sizing: border-box;
 }
 nav li:hover{
-    background-color: #ffffff;
-    color: #941f57;
+    color: #333333;
 }
 nav a{
     text-decoration: none;
@@ -43,6 +43,7 @@ nav a{
     border-radius: 10px;
     margin: 13% 5% 10% 5%;
     padding: 10px 10px 5px 20px;
+    box-shadow: 0 0 4px #e3adc1;
 }
 .main-content img{
     width: 30%;
@@ -66,6 +67,7 @@ nav a{
     margin-right: auto;
     padding: 10px 10px 10px 20px;
     box-sizing: border-box;
+    box-shadow: 0 0 4px #e3adc1;
 }
 .main-content2 h3{
     color: #941f57;
@@ -75,8 +77,31 @@ nav a{
     width: 30%;
     margin-left: 10px;
     border-radius: 10px;
-    border: 2px solid #1e50a2;
+    box-shadow: 0 0 4px #1e50a2;
 }
 .main-content2 li{
     list-style: none;
+}
+.main-content3{
+    width: 100%;
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    box-sizing: border-box;
+}
+.img-top{
+    width: 25%;
+    padding: 10px 20px 10px 20px;
+    margin-top: 10%;
+    margin-left: 2%;
+    margin-right: 2%;
+    box-sizing: border-box;
+    border: 1px solid #bfbfbf;
+    text-align: center;
+    border-radius: 10px;
+}
+.img-top img{
+    width: 100%;
+    border-radius: 10px;
+    margin: 5px;
 }
