--- a/28/style.css
+++ b/28/style.css
@@ -6,7 +6,7 @@ body{
 }
 nav{
     background-color: #eaf4fc;
-    color: #941f57;
+    color: #2e1c48;
     position: absolute;
     top: 0;
     width: 100%;
@@ -19,12 +19,12 @@ nav li{
     margin-right: 20px;
     box-sizing: border-box;
 }
-nav li:hover{
-    color: #333333;
+nav a:hover{
+    color: #0042b5;
 }
 nav a{
     text-decoration: none;
-    color: #941f57;
+    color: #2e1c48;
 }
 
 /*home.html*/
@@ -45,9 +45,9 @@ nav a{
     margin-bottom: 10%;
 }
 .main-content h3{
-    background-color: #fff9fc;
-    color: #941f57;
-    border-radius: 5px;
+    background-color: #fff3f9;
+    color: #61585c;
+    border-radius: 10px;
     width: 30%;
     margin-left: auto;
     margin-right: auto;
@@ -72,10 +72,13 @@ nav a{
     margin-top: 90px;
     box-sizing: border-box;
 }
+.home-div h1{
+    text-shadow: #c7d5e6 0 0 4px;
+}
 .main-content3{
     width: 100%;
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: center;
     box-sizing: border-box;
     margin-bottom: 10%;
@@ -92,9 +95,20 @@ nav a{
     text-align: center;
     border-radius: 10px;
     box-shadow: 0 0 5px #e2d2ea;
+    margin-bottom: 15px;
 }
 .img-top img{
     width: 100%;
     border-radius: 10px;
     margin: 5px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.color-title{
+    background-color: #fbf3ff;
+    border-radius: 5px;
+    padding: 3px 0 3px 0;
+    width: 75%;
+    margin-left: auto;
+    margin-right: auto;
 }
