--- a/28/style.css
+++ b/28/style.css
@@ -51,6 +51,7 @@ nav a{
     width: 30%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0 0 3px #cccccc;
 }
 .main-content li{
     list-style: none;
@@ -110,4 +111,5 @@ nav a{
     width: 75%;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: 0 0 3px #cccccc;
 }
