--- a/28/style.css
+++ b/28/style.css
@@ -10,6 +10,7 @@ nav{
     position: fixed;
     top: 0;
     width: 100%;
+    z-index: 1000;
 }
 nav ul{
     display: flex;
@@ -43,6 +44,7 @@ nav a{
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 10%;
+    animation: zoomIn 1.0s cubic-bezier(0.25, 1, 0.5, 1) forwards;
 }
 .main-content h3{
     background-color: #fff3f9;
@@ -96,6 +98,20 @@ nav a{
     border-radius: 10px;
     box-shadow: 0 0 5px #e2d2ea;
     margin-bottom: 15px;
+}
+.img-top{
+    animation: zoomIn 2.0s cubic-bezier(0.25, 1, 0.5, 1) forwards;
+}
+ 
+@keyframes zoomIn {
+  0% {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
 .img-top img{
     width: 100%;
